--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/timesfutsal
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
 spring.datasource.username=postgres
-spring.datasource.password=chagrazar
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
