--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 			<version>2.2.4</version>	
 		</dependency>
 		
+		 <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter-data-rest</artifactId>
+          </dependency>
+          <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter-data-jpa</artifactId>
+          </dependency>
+		
 	</dependencies>
 
 	<build>
