--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.openInView=true
+
+mvn sonar:sonar \
+  -Dsonar.organization=jonaslopesdoo-github \
+  -Dsonar.host.url=https://sonarcloud.io \
+  -Dsonar.login=6e5c7af849f76746d3407ee5ff3779681fde51cf
+  
