--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.openInView=true
 
 
 mvn sonar:sonar \
+  -Dsonar.projectKey=JonasLopesdoO_CineManager \
   -Dsonar.organization=jonaslopesdoo-github \
   -Dsonar.host.url=https://sonarcloud.io \
-  -Dsonar.login=6e5c7af849f76746d3407ee5ff3779681fde51cf
+  -Dsonar.login=ee1cee316ec5fd7a2b6d15e05e3e558f551dc437
   
