--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,21 @@
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-data-jpa</artifactId>
           </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.sonarsource.java/sonar-java-plugin -->
+		<dependency>
+		    <groupId>org.sonarsource.java</groupId>
+		    <artifactId>sonar-java-plugin</artifactId>
+		    <version>4.2</version>
+		    <scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
+	
 
 	<build>
 		<plugins>
