--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>spring-test</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.sonarsource.java/sonar-java-plugin -->
 		<dependency>
 		    <groupId>org.sonarsource.java</groupId>
@@ -82,18 +89,17 @@
 		    <version>4.2</version>
 		    <scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 	
-
 	<build>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
 	</build>
-
-
+	
 </project>
